@@ -1,3 +1,13 @@
+2009-01-06  Matias De la Puente  <mfpuente.ar@gmail.com>
+
+	* watraysimple/simpledocumentmanager.vala
+	* watraysimple/simpleplugin.vala
+	* po/es_AR.po
+	* po/POTFILES.skip
+	* po/POTFILES.in
+	
+	Added internationalization support for simpleplugin
+	
 2009-01-05  Matias De la Puente  <mfpuente.ar@gmail.com>
 
 	* README:
